--- a/FDS-S1-02-data-wrangling-solution.ipynb
+++ b/FDS-S1-02-data-wrangling-solution.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Foundation Data Sciences\n",
-    "## Week 03: Pandas - Data Wrangling"
+    "# Foundations of Data Science\n",
+    "## S1 Week 02: Pandas - Data Wrangling"
    ]
   },
   {
@@ -1308,7 +1308,7 @@
     "2. if a non-numeric value is encountered (error), either it is ignored, raised (see below) or replaced by a NaN value (`error = 'coerce'`)\n",
     "3. if `downcast` is chosen (default is `None`), it casts all numeric values down to the specified parameter. \n",
     "\n",
-    "**Remark:** If the chosen `dtype` occupies more bits  than the `dtype` of the value (e.g. chosen `dtype` is `float`, but the found value is `int`) `pd.to_numeric` doesn't recast the value! **DCS comment: I notice there's still a comment to CHECK here**"
+    "**Remark:** If the chosen `dtype` occupies more bits  than the `dtype` of the value (e.g. chosen `dtype` is `float`, but the found value is `int`) `pd.to_numeric` doesn't recast the value!"
    ]
   },
   {
@@ -2709,7 +2709,9 @@
     "**Exercise 05:** \n",
     "- Print *all* occurrences of duplicates. Hint: think about the keep parameter.\n",
     "- Print all the countries that appear in the list. Each country should only appear once.\n",
-    "- Create a new DataFrame from the `life_expectancy` DataFrame, with the name `cleaned_life_expectancy`, in which  each country only appears once. Since the entries are sorted newest to oldest, only keep the newest observation of each country. Print out the first few lines to check your DataFrame looks as expected. **DCS comment: I think you might want to give a hint about using the tilde operator for applying `not` to pandas Series**"
+    "- Create a new DataFrame from the `life_expectancy` DataFrame, with the name `cleaned_life_expectancy`, in which  each country only appears once. Since the entries are sorted newest to oldest, only keep the newest observation of each country. Print out the first few lines to check your DataFrame looks as expected.\n",
+    "\n",
+    "**Hint:** to negate a condition in Pandas, use the tilde `~` operator instead of `not`, e.g.: if `people` is a DataFrame with a column `adult` of boolean values: `child = people[~people['adult']]`."
    ]
   },
   {
@@ -4134,7 +4136,7 @@
     "**Remarks**\n",
     "- In contrast to `pd.concat()`, `pd.merge()` only takes two DataFrames as input (left and right)\n",
     "- `pd.merge()` compares the rows across all data entries. For example, in the 'right' dataset the data entry 'K0' is in the second row though in the left data set it is in the first row.\n",
-    "- As you can see above, by default, `pd.merge()` uses an inner join. **[DCS comment: But it's a bit different from the inner join we've just seen...]**\n",
+    "- As you can see above, by default, `pd.merge()` uses an inner join.\n",
     "- The column specified by the keyword 'on' needs to be *written the same way* in both datasets.\n",
     "\n",
     "With `pd.concat()` the 'join' parameter specifies an inner join and an outer join. With `pd.merge()` we have the same option, only the keyword is `how={'inner', 'outer', 'left', 'right'}`, with the two extra options `left` and `right`. Technically `left` stands for 'left outer join', and means that:\n",
@@ -4777,7 +4779,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
